--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,85 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+img {
+  display: block;
+
+  width: 222px;
+  height: 150px;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+.search-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-content: center;
+
+  transform: translate(-50%, -50%);
 }
 
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
+.form-container {
+  position: relative;
+
+  height: 50px;
+
+  background-color: cornflowerblue;
+}
+
+.load-more {
+  display: none;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 30px 10px;
+
+  cursor: pointer;
+
+  transition: background-color 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94),
+    color 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94),
+    border-color 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.load-more:hover {
+  color: white;
+  border-color: white;
+
+  background-color: black;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.photo-card {
+  margin: 0 auto 10px auto;
+
+  list-style: none;
+
+  transition: box-shadow 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.photo-card:hover {
+  box-shadow: 2px 4px 2px 1px rgba(0, 0, 0, 0.25);
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  gap: 2px;
+
+  font-size: 12px;
+  font-weight: 500;
+
+  color: cornflowerblue;
+}
+
+span {
+  display: flex;
+  justify-content: center;
+
+  font-size: 9px;
+  font-weight: 300;
+
+  color: black;
 }
